crates/sentinel-driver/tests/ui/error_exhaustive_fail.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
 --> tests/ui/error_exhaustive_fail.rs:6:11
  |
6 |     match e {
  |           ^ pattern `_` not covered
  |
note: `sentinel_driver::Error` defined here
 --> src/error.rs
  |
  | pub enum Error {
  | ^^^^^^^^^^^^^^
  = note: the matched value is of type `sentinel_driver::Error`
  = note: `sentinel_driver::Error` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
  |
8 ~         Error::TransactionCompleted => "done",
9 ~         _ => todo!(),
  |
